fix: new expectedPtOut field in response
